# trigg_engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile.desktop  main.cpp  main_glfw.cpp
Docs/: ACTION_PLAN.md  BITWISE_OPERATIONS.md  CONCEPTS.md  CPP_EMBEDDED.md  CPP_KNOWLEDGE.md  DESIGN_DECISIONS.md  PICOTOOL.md  PICO_SDK_REFERENCE.md  SERIAL_MONITOR.md  TECHNICAL_SPECS.md
Docs/action_plan/: ACTION_PLAN.md  HARDWARE_UPGRADES.md  ISOMETRIC_IMPLEMENTATION_PLAN.md  SETUP.md
Docs/cpp/: CPP_EMBEDDED.md  CPP_KNOWLEDGE.md  FIXED_POINT.md
Docs/graphics/: alpha_channel.md  bresenham.md
Docs/hardware/: HARDWARE_UPGRADES.md  display_commands.md  display_pins.md  dma.md  endianness.md  gpio.md  memory.md  pwm.md  rgb565.md  spi.md
Docs/isometric/: isometric_consepts.md  rendering.md  sprites.md
Docs/memory/: level_loading.md  overview.md  sd_card.md
Docs/pico/: DESIGN_DECISIONS.md  PICOTOOL.md  SERIAL_MONITOR.md  TECHNICAL_SPECS.md
assets/: skeleton_alpha.sprite  wizard.sprite  wizard2.h  wizard2.sprite
delete_later/: c++_and_templates.md
drivers/: buttons.cpp  buttons.h  display.cpp  display.h  display_internal.h  hardware_config.h  helpers.cpp  st7735_commands.cpp  st7735_commands.h  st7735_driver.cpp
engine/entity/: entity.hpp
engine/graphics/: framebuffer.cpp  framebuffer.h
engine/isometric/: iso_math.h
engine/math/: fixed_point.h
tools/: README.md  analyze_alpha.cpp  inspect_sprite.cpp  png_to_sprite.cpp  png_to_sprite_alpha.cpp  png_to_sprite_verbose.cpp  sprite_to_cpp.py  sprite_to_cpp_alpha.py
tools/png_to_sprite/: png_to_sprite.cpp  (+1 more)
(+1 files in other folders)
